# KNN-classifier

./: CLI.cpp  CLI.h  CMakeLists.txt  CheckInput.cpp  CheckInput.h  Classify.cpp  Classify.h  Client.cpp  Client.h  Command.cpp  Command.h  DefaultIO.cpp  DefaultIO.h  Display.cpp  Display.h  Download.cpp  Download.h  KnnDB.cpp  KnnDB.h  KnnServer.cpp  KnnServer.h  KnnVec.cpp  KnnVec.h  Makefile  README.md  Server.cpp  Server.h  Settings.cpp  Settings.h  SocketIO.cpp  SocketIO.h  StandardIO.cpp  StandardIO.h  UploadC.cpp  UploadC.h  VectorCalDis.cpp  VectorCalDis.h  client  mainServer.cpp  server.out
